# std-utils

./: Cargo.toml
error-macro/: Cargo.toml  README.md
error-macro/src/: enum.rs  lib.rs  struct.rs  tuple_struct.rs  unit_struct.rs
error-macro/tests/: macro_enum.rs  macro_struct.rs  macro_tuple_struct.rs  macro_unit_struct.rs  no_std.rs
impl-macros/: Cargo.toml  README.md
impl-macros/src/: alloc_.rs  lib.rs
impl-macros/tests/: macro_impl_partial_eq_str_for_display.rs
windows-raw-socket-wrapper/: Cargo.toml  README.md
windows-raw-socket-wrapper/src/: lib.rs
wrapping-macro/: Cargo.toml  README.md
wrapping-macro/src/: lib.rs  wrapping.rs
wrapping-macro/tests/: macro_wrapping.rs  macro_wrapping_num.rs  macro_wrapping_string.rs
