[package]
name = "wrapping-macro"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "wrapping macro"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/std-utils"
homepage = "https://github.com/bk-rs/std-utils"
documentation = "https://docs.rs/wrapping-macro"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
